--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
         "jsx": "react",
         // Компилятор будет обрабатывать не только TS файлы, но и JS файлы
         "allowJs": true,
+        // Для абсолютного импорта
+        "baseUrl": ".",
         "moduleResolution": "node",
         // esModuleInterop позволяет работать с пакетами, которые используют
         // common js как с обычными пакета с помощью import (require() module.export) = common js
