--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,9 @@
         "module": "es6",
         // В какую спецификацию компилируем: для поддержки большинства браузеров
         "target": "es5",
-        "jsx": "react-jsx",
+        "jsx": "react",
         // Компилятор будет обрабатывать не только TS файлы, но и JS файлы
         "allowJs": true,
-        // Для абсолютного импорта
-        "baseUrl": ".",
         "moduleResolution": "node",
         // esModuleInterop позволяет работать с пакетами, которые используют
         // common js как с обычными пакета с помощью import (require() module.export) = common js
@@ -29,7 +27,7 @@
         // import * as React from 'react';
         // можно писать такой
         // import React from 'react';
-        "allowSyntheticDefaultImports": true,
+        "allowSyntheticDefaultImports": true
     },
     "ts-node": {
         "compilerOptions": {
