--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,28 @@
 {
     "compilerOptions": {
-        // куда происходит сборка, в нашем случае используем webpack, поэтому тут это не важно
         "outDir": "./dist/",
         // Подсвечивает все места где не указан тип
         // Однако это не означает, что теперь вовсе нельзя использовать any.
         // Это означает лишь, что в подобных ситуация разработчик должен явно писать any,
         "noImplicitAny": true,
-        "module": "es6",
+        "module": "ESNext",
         // В какую спецификацию компилируем: для поддержки большинства браузеров
         "target": "es5",
         "jsx": "react-jsx",
         // Компилятор будет обрабатывать не только TS файлы, но и JS файлы
         "allowJs": true,
+        "moduleResolution": "node",
         // Для абсолютного импорта
         "baseUrl": ".",
-        "moduleResolution": "node",
+        "paths": {
+            "*": ["./src/*"]
+        },
         // esModuleInterop позволяет работать с пакетами, которые используют
         // common js как с обычными пакета с помощью import (require() module.export) = common js
         // import Moment from 'moment';
         // без флага esModuleInterop результат undefined
         // console.log(Moment);
-        // c флагом результат [object Object] который уже можем использовать
+        // c флагом результат [object Object]
         // console.log(Moment);
         "esModuleInterop": true,
         // Если какая-либо библиотека не имеет default import,
@@ -29,7 +31,7 @@
         // import * as React from 'react';
         // можно писать такой
         // import React from 'react';
-        "allowSyntheticDefaultImports": true,
+        "allowSyntheticDefaultImports": true
     },
     "ts-node": {
         "compilerOptions": {
