--- a/package.json
+++ b/package.json
@@ -6,26 +6,51 @@
     "scripts": {
         "start": "webpack serve --env port=3000",
         "build:prod": "webpack --env mode=production",
-        "build:dev": "webpack --env mode=development"
+        "build:dev": "webpack --env mode=development",
+        "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
+        "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
+        "lint:scss": "npx stylelint \"**/*.scss\"",
+        "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+        "prettier:fix": "prettier --write \"**/*.{js,ts,tsx}\"",
+        "jest": "jest --config ./config/jest/jest.config.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.17.5",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-typescript": "^7.16.7",
         "@svgr/webpack": "^6.2.1",
+        "@types/jest": "^27.4.1",
         "@types/node": "^17.0.21",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "@types/react-router-dom": "^5.3.3",
         "@types/webpack": "^5.28.0",
         "@types/webpack-dev-server": "^4.7.2",
+        "@typescript-eslint/eslint-plugin": "^5.12.1",
+        "@typescript-eslint/parser": "^5.12.1",
+        "babel-loader": "^8.2.3",
         "css-loader": "^6.6.0",
+        "eslint": "^8.10.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.29.2",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
+        "jest": "^27.5.1",
         "mini-css-extract-plugin": "^2.5.3",
+        "prettier": "2.7.1",
         "sass": "^1.49.9",
         "sass-loader": "^12.6.0",
         "style-loader": "^3.3.1",
+        "stylelint": "^14.5.3",
+        "stylelint-config-standard-scss": "^3.0.0",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.5.0",
         "typescript": "^4.5.5",
@@ -34,6 +59,7 @@
         "webpack-dev-server": "^4.7.4"
     },
     "dependencies": {
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
         "i18next": "^21.6.11",
         "i18next-browser-languagedetector": "^6.1.3",
         "i18next-http-backend": "^1.3.2",
