--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
         "lint:scss": "npx stylelint \"**/*.scss\"",
         "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
         "prettier:fix": "prettier --write \"**/*.{js,ts,tsx}\"",
-        "jest": "jest --config ./config/jest/jest.config.ts",
-        "jest:loki": "npx loki test",
-        "jest:loki:ok": "npx loki approve",
+        "test:unit": "jest --config ./config/jest/jest.config.ts",
+        "test:ui": "npx loki test",
+        "test:ui:ok": "npx loki approve",
+        "test:ui:ci": "loki --requireReference --reactUri file:./storybook-static",
         "storybook": "start-storybook -p 6006 -c ./config/storybook",
         "storybook:build": "build-storybook -c ./config/storybook"
     },
@@ -52,6 +53,7 @@
         "eslint": "^8.10.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-i18next": "^6.0.0-4",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.2.1",
