--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "test:ui:json": "node scripts/generate-visual-json-report.js",
         "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
         "storybook": "start-storybook -p 6006 -c ./config/storybook",
-        "storybook:build": "build-storybook -c ./config/storybook"
+        "storybook:build": "build-storybook -c ./config/storybook",
+        "prepare": "husky install"
     },
     "keywords": [],
     "author": "",
@@ -85,7 +86,8 @@
         "webpack": "^5.69.1",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.7.4"
+        "webpack-dev-server": "^4.7.4",
+        "husky": "^8.0.0"
     },
     "dependencies": {
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
