--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "dependencies": {
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
         "@reduxjs/toolkit": "^1.8.0",
+        "axios": "^1.1.2",
         "i18next": "^21.6.11",
         "i18next-browser-languagedetector": "^6.1.3",
         "i18next-http-backend": "^1.3.2",
@@ -106,9 +107,7 @@
             "chrome.laptop": {
                 "target": "chrome.app",
                 "width": 1366,
-                "height": 768,
-                "deviceScaleFactor": 1,
-                "mobile": false
+                "height": 768
             },
             "chrome.iphone7": {
                 "target": "chrome.app",
