--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "start": "webpack serve --env port=3000",
         "start:dev:server": "node ./json-server/index.js",
+        "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
         "build:prod": "webpack --env mode=production",
         "build:dev": "webpack --env mode=development",
         "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
@@ -55,6 +56,7 @@
         "@typescript-eslint/eslint-plugin": "^5.12.1",
         "@typescript-eslint/parser": "^5.12.1",
         "babel-loader": "^8.2.3",
+        "concurrently": "^7.5.0",
         "css-loader": "^6.6.0",
         "eslint": "^8.10.0",
         "eslint-config-airbnb": "^19.0.4",
