--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@typescript-eslint/parser": "^5.12.1",
         "babel-loader": "^8.2.3",
         "concurrently": "^7.5.0",
+        "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.6.0",
         "eslint": "^8.10.0",
         "eslint-config-airbnb": "^19.0.4",
