--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "eslint-plugin-react": "^7.29.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-storybook": "^0.6.4",
+        "eslint-plugin-vit-vokhminov-fsd": "^0.0.3",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "husky": "^7.0.0",
